--- a/easy_arm/ambarella/cnn_motrack/CMakeLists.txt
+++ b/easy_arm/ambarella/cnn_motrack/CMakeLists.txt
@@ -6,8 +6,8 @@ project(cnn_motrack)
 
 set(CMAKE_ASM_COMPILER ${CMAKE_C_COMPILER})
 
-add_definitions(-DIS_SHOW)
-#add_definitions(-DIS_SEND_DATA)
+#add_definitions(-DIS_SHOW)
+add_definitions(-DIS_SEND_DATA)
 
 #include amba_arm directories
 include(${PROJECT_SOURCE_DIR}/../cmake/ambacv25_3_dependencies.cmake)
