--- a/easy_arm/ambarella/cnn_motrack/CMakeLists.txt
+++ b/easy_arm/ambarella/cnn_motrack/CMakeLists.txt
@@ -2,58 +2,43 @@
 cmake_minimum_required(VERSION 3.5.0)
 
 #2.project name
-project(cnn_motrack)
+project(yolov5rt)
 
 set(CMAKE_ASM_COMPILER ${CMAKE_C_COMPILER})
 
-add_definitions(-DIS_SHOW)
-add_definitions(-DIS_SEND_DATA)
+#add_definitions(-DIS_SHOW)
+#add_definitions(-DIS_SEND_DATA)
 
 #include amba_arm directories
 include(${PROJECT_SOURCE_DIR}/../cmake/ambacv25_3_dependencies.cmake)
 
 #include MOT headers
-include_directories(${PROJECT_SOURCE_DIR}/fairmot)
 include_directories(${PROJECT_SOURCE_DIR}/common)
-include_directories(${PROJECT_SOURCE_DIR}/network)
-include_directories(${PROJECT_SOURCE_DIR}/postprocess)
+include_directories(${PROJECT_SOURCE_DIR}/yolov5rt/yolov5)
 
-add_executable(test_motrack "")
-
-#collect image acquisition files
-file(GLOB IMA_SRCS
-    "${PROJECT_SOURCE_DIR}/image_acquisition/*.cpp"
+#collect yolov5 files
+file(GLOB YOLOV5_SRCS
+    "${PROJECT_SOURCE_DIR}/yolov5rt/yolov5/*.cpp"
 	)
 
-#collect source files
-file(GLOB MOT_SRCS
-    "${PROJECT_SOURCE_DIR}/fairmot/*.cpp"
-    "${PROJECT_SOURCE_DIR}/fairmot/*.c"
-	)
-
-file(GLOB NETWORK_SRCS
-    "${PROJECT_SOURCE_DIR}/network/*.cpp"
-    )
-
-file(GLOB POSTPROCESS_SRCS
-    "${PROJECT_SOURCE_DIR}/postprocess/*.cpp"
-    )
-
+#collect UTILS files
 file(GLOB UTILS_SRCS
     "${PROJECT_SOURCE_DIR}/common/*.cpp"
-    )
+	)
 
-target_sources(test_motrack
+
+add_executable(test_yolov5rt "")
+
+target_sources(test_yolov5rt
         PRIVATE
-        "${PROJECT_SOURCE_DIR}/test_motrack.cpp"
-        ${MOT_SRCS}
-        ${POSTPROCESS_SRCS}
-        ${NETWORK_SRCS}
+        "${PROJECT_SOURCE_DIR}/test_yolov5rt.cpp"
+        ${YOLOV5_SRCS}
         ${UTILS_SRCS}
         )
 
 # link libraries
-target_link_libraries(test_motrack
+# link libraries
+target_link_libraries(test_yolov5rt
                       opencv_core
                       opencv_imgcodecs
                       opencv_imgproc
