one class精度问题的修改

--- a/easy_arm/ambarella/CMakeLists.txt
+++ b/easy_arm/ambarella/CMakeLists.txt
@@ -18,7 +18,8 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 #include dependencies
-include(cmake/ambacv25_3_dependencies.cmake)
+#include(cmake/ambacv25_3_dependencies.cmake)
+include(cmake/ambacv22_2_dependencies.cmake)
 
 #include_directories
 message(STATUS "PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
@@ -27,7 +28,7 @@ message(STATUS "PROJECT_BINARY_DIR: ${PROJECT_BINARY_DIR}")
 add_subdirectory(cnn_runtime)
 
 #build test cnn
-#add_subdirectory(cnn_runtime/tests)
+add_subdirectory(cnn_runtime/tests)
 
 #build cnn_lpr
-add_subdirectory(cnn_lpr)
+#add_subdirectory(cnn_lpr)
