--- a/3rd_sdk/h3c/CMakeLists.txt
+++ b/3rd_sdk/h3c/CMakeLists.txt
@@ -49,4 +49,5 @@ target_link_libraries(test_web
                       idm_transfile
                       idm_vod
                       idm_voicetalk
+                      libmysql
                       wsock32)
